--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <script type="text/javascript">
 window.onload = function () {
 	MIDI.loadPlugin({
-		soundfontUrl: "./soundfont/",
+		soundfontUrl: "MIDIjs/examples/soundfont/",
 		instrument: "acoustic_grand_piano",
 		onprogress: function(state, progress) {
 			console.log(state, progress);
